# tnjax

./: pyproject.toml
examples/: test.ipynb
src/tnjax/tci/: pivot_finders.py
src/tnjax/tensor_networks/: tensor_network.py
tests/tensor_networks/: test_tensor_networks.py  test_tensor_trains.py
