[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py_ttcross"
version = "0.1.1"
description = "Tensor Train Cross Approximation utilities with JAX backend"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Pau Torrente", email = "ptbadia@gmail.com" }]
license = { text = "MIT" }

dependencies = [
    # Core dependencies
    "jax>=0.4.35",
    "jaxlib>=0.4.35",  # Base CPU wheel; compatible everywhere
    "ncon==2.0.0",
    "numba>=0.59.1",
    "numpy>=1.26.4",
    "scipy>=1.12.0",
    "matplotlib>=3.8.3",
    "ipython>=9.6.0",
    "ipykernel>=7.1.0",
    "networkx>=3.5.0",
    "matplotlib>=3.10.7",
]

[project.optional-dependencies]
# Install via: pip install .[gpu]
gpu = ["jax[cuda12]>=0.4.35"]
dev = ["pytest", "black"]

[tool.setuptools.packages.find]
where = ["src"]
